<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lingao_base</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="josefgstoettner@live.at">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>lingao_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>imu-filter-madgwick</depend>
  <depend>libboost-dev</depend>
  <depend>boost</depend>
  <depend>lboost_thread-mt</depend>
  <depend>std_msgs</depend>
  <depend>boost_system</depend>
  <depend>boost_thread</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
